# ticket-routing

./: .gitignore  LICENSE  README.md  classification_model.py  clustering.py  ingestion.py  preprocessing.py  pyproject.toml  requirements.txt
eda/: eda.ipynb
models/: model-baseline.pkl
notebooks/: 01-clustering-quality.ipynb  02-eda.ipynb  eda.ipynb
src/: baseline_model.py  data_cleaning.py  feature_engineering.py
tests/: test_data_cleaning.py  test_feature_engineering.py
