[tool.poetry]
name = "ticket-routing"
version = "0.1.0"
description = ""
authors = ["Filippo Pellizzari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pyarrow = "^13.0.0"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
